# KorEngine

./: Cargo.toml  LICENSE  README.md  square.glb
src/: allocators.rs  animation_system.rs  camera.rs  engine.rs  format_converter.rs  game.rs  geometry.rs  graphics.rs  input.rs  lib.rs  load_gltf.rs  logo.rs  main.rs  main2.rs  pipeline.rs  shaders.rs
src/animation/: animation.rs  animator.rs
src/animation_system/: animator.rs
src/geometry/: quaternion.rs  transform.rs  vec3.rs
src/graphics/: allocators.rs  animation.rs  animator.rs  engine.rs  format_converter.rs  load_gltf.rs  pipeline.rs  shaders.rs
src/graphics/format_converter/: metal_roughness.rs  occlusion.rs
src/graphics/shaders/: animated_vertex.glsl  basic_animated_vertex.glsl  basic_fragment.glsl  basic_vertex.glsl  fragment.glsl  map_joints.glsl  normal.glsl  tangent_simple.glsl  textured_animated_vertex.glsl  textured_fragment.glsl  textured_metal_animated_vertex.glsl  textured_metal_fragment.glsl  textured_metal_vertex.glsl  textured_normal_animated_vertex.glsl  textured_normal_fragment.glsl  textured_normal_vertex.glsl  textured_vertex.glsl  unindex_uvec4.glsl  unindex_vec2.glsl  unindex_vec4.glsl  vertex.glsl
src/shaders/: basic_vertex.glsl  fragment_shader.glsl  textured_fragment.glsl  textured_vertex.glsl  unindex.glsl  vertex_shader.glsl
