[package]
name = "kor_engine"
version = "0.1.0"
edition = "2021"
description = "a small game engine prototype based on vulkano"
repository = "https://github.com/QueCaudroit/KorEngine"
license-file = "LICENSE.txt"
keywords = ["gamedev", "graphics"]
categories = ["game-engines"]


[lib]
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
gltf = "1.0"
image = "0.24"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28"